# M1.209

./: Prova de síntesi 2014:25.docx
PAC1/files/: Makefile  Q4.ods  README  app  app.c  app2  app2_10.csv  app2_100.csv  app2_1000.csv  app2_1000_1.1136064.err  app2_1000_1.1136064.out  app2_1000_10.1136073.err  app2_1000_10.1136073.out  app2_1000_2.1136065.err  app2_1000_2.1136065.out  app2_1000_3.1136066.err  app2_1000_3.1136066.out  app2_1000_4.1136067.err  app2_1000_4.1136067.out  app2_1000_5.1136068.err  app2_1000_5.1136068.out  app2_1000_6.1136069.err  app2_1000_6.1136069.out  app2_1000_7.1136070.err  app2_1000_7.1136070.out  app2_1000_8.1136071.err  app2_1000_8.1136071.out  app2_1000_9.1136072.err  app2_1000_9.1136072.out  app2_100_1.1136044.err  app2_100_1.1136044.out  app2_100_10.1136053.err  app2_100_10.1136053.out  app2_100_2.1136045.err  app2_100_2.1136045.out  app2_100_3.1136046.out  app2_100_4.1136047.err  app2_100_4.1136047.out  app2_100_5.1136048.err  app2_100_5.1136048.out  (+570 more)
PAC1/statement/: cat1.tgz
PAC2/files/: .~lock.flops.csv#  .~lock.flops2.csv#  Makefile  README  big.ptse.gnu  build_sheduling.sh  check_libraries_NPB.sh  chmod.sh  clean.sh  counters.c  counters.csv  counters.sh  counters.v1.c  counters.v1.csv  counters.v1.sh  counters.v1.txt  counters.v1_1.1157587.out  counters.v1_10.1157596.out  counters.v1_2.1157588.out  counters.v1_3.1157589.out  counters.v1_4.1157590.out  counters.v1_5.1157591.out  counters.v1_6.1157592.out  counters.v1_7.1157593.out  counters.v1_8.1157594.out  counters.v1_9.1157595.out  counters.v2.c  counters.v2.csv  counters.v2.sh  counters.v2.txt  counters.v2_1.1157722.out  counters.v2_10.1157731.out  counters.v2_2.1157723.out  counters.v2_3.1157724.out  counters.v2_4.1157725.out  counters.v2_5.1157726.out  counters.v2_6.1157727.out  counters.v2_7.1157728.out  counters.v2_8.1157729.out  (+976 more)
PAC3/files/source/: .gitignore  README  autogen.sh  configure  configure.ac
PAC3/files/source/autom4te.cache/: output.0  traces.0  traces.1
PAC3/files/source/src/: Makefile.am  deadlock.0.c  deadlock.1.c  deadlock.2.c  deadlock.SIZE.c  deadlock.SIZE.v2.c  deadlock.c  hello.c  mpi_send_recv.c  ranks.c  rma.c  stencil.c
(+94 files in other folders)
